--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "prod-setup",
   "version": "1.0.0",
+ 
   "main": "index.js",
   "scripts": {
-    "test"  : "node test.js" ,
-    "start": "node index.js",
+    "build" : "npx tsc",
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js",
     "prepare": "husky"
   },
   "keywords": [],
@@ -12,7 +14,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "husky": "^9.1.7",
-    "lint-staged": "^16.2.7"
+    "lint-staged": "^16.2.7",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
