--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "prod-setup",
   "version": "1.0.0",
  
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-   
+    
     "build" : "npx tsc",
-    "dev": "nodemon src/index.ts",
-    "start": "node dist/index.js",
+    "dev": "nodemon src/server.ts",
+    "start": "node dist/server.js",
     "prepare": "husky"
   },
   "keywords": [],
