--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "prod-setup",
   "version": "1.0.0",
- 
   "main": "server.js",
   "scripts": {
-    
-    "build" : "npx tsc",
+    "build": "npx tsc",
     "dev": "nodemon src/server.ts",
     "start": "node dist/server.js",
     "prepare": "husky"
@@ -15,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
     "@types/node": "^25.0.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
