--- a/package.json
+++ b/package.json
@@ -1,41 +1,40 @@
 {
-  "name": "prod-setup",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "lint": "eslint .",
-    "build": "npx tsc",
-    "dev": "nodemon src/server.ts",
-    "start": "node dist/server.js",
-    "lint:fix": "eslint . --fix",
-    "format:check": "prettier --check .",
-    "format:fix": "prettier --fix .",
-    "prepare": "husky"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "lint-staged": {
-    "*.{ts,js}": [
-      "npm run lint:fix",
-      "npm run format:fix"
-
-    ]
-  },
-  "description": "",
-  "devDependencies": {
-    "@commitlint/cli": "^20.2.0",
-    "@commitlint/config-conventional": "^20.2.0",
-    "@eslint/js": "^9.39.2",
-    "@types/node": "^25.0.3",
-    "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7",
-    "nodemon": "^3.1.11",
-    "prettier": "3.7.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.51.0"
-  }
+    "name": "prod-setup",
+    "version": "1.0.0",
+    "main": "server.js",
+    "scripts": {
+        "lint": "eslint .",
+        "build": "npx tsc",
+        "dev": "nodemon src/server.ts",
+        "start": "node dist/server.js",
+        "lint:fix": "eslint . --fix",
+        "format:check": "prettier --check .",
+        "format:fix": "prettier --write .",
+        "prepare": "husky"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "lint-staged": {
+        "*.{ts,js}": [
+            "npm run lint:fix",
+            "npm run format:fix"
+        ]
+    },
+    "description": "",
+    "devDependencies": {
+        "@commitlint/cli": "^20.2.0",
+        "@commitlint/config-conventional": "^20.2.0",
+        "@eslint/js": "^9.39.2",
+        "@types/node": "^25.0.3",
+        "eslint": "^9.39.2",
+        "eslint-config-prettier": "^10.1.8",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.2.7",
+        "nodemon": "^3.1.11",
+        "prettier": "3.7.4",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.51.0"
+    }
 }
