--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "scripts": {
         "lint": "eslint .",
         "build": "npx tsc",
-        "dev": "nodemon src/server.ts",
-        "start": "node dist/server.js",
+        "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
+        "start": "cross-env NODE_ENV=production node dist/server.js",
         "lint:fix": "eslint . --fix",
         "format:check": "prettier --check .",
         "format:fix": "prettier --write .",
@@ -36,5 +36,9 @@
         "ts-node": "^10.9.2",
         "typescript": "^5.9.3",
         "typescript-eslint": "^8.51.0"
+    },
+    "dependencies": {
+        "cross-env": "^10.1.0",
+        "dotenv-flow": "^4.1.0"
     }
 }
